# basenc

./: Cargo.toml  license.txt  readme.md
.github/workflows/: ci.yml
benches/: benchmark.rs
proptest/: Cargo.toml
proptest/tests/: proptest.rs
src/: arch.rs  base32.rs  base64.rs  buf.rs  encoding.rs  hex.rs  incremental.rs  lib.rs  pad.rs  ratio.rs
src/base32/: decode.rs  encode.rs
src/base32/decode/: scalar.rs
src/base32/encode/: scalar.rs
src/base64/: decode.rs  encode.rs
src/base64/decode/: generic.rs  scalar.rs  sse2.rs  ssse3.rs
src/base64/encode/: generic.rs  scalar.rs  ssse3.rs
src/details/: mod.rs
src/details/base64/: decode.rs  encode.rs  mod.rs  tests.rs
src/details/hex/: decode.rs  encode.rs  mod.rs  tests.rs
src/hex/: decode.rs  encode.rs
src/hex/decode/: avx2.rs  generic.rs  scalar.rs  sse2.rs
src/hex/encode/: generic.rs  scalar.rs  sse2.rs  ssse3.rs
tests/: base32.rs  base64.rs  hex.rs
