[package]
name = "basenc"
version = "0.2.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"

description = "Encoding and decoding of Base-N encodings, no_std compatible."
documentation = "https://docs.rs/basenc/"
repository = "https://github.com/CasualX/basenc"
readme = "readme.md"
keywords = ["base64", "utf8", "encode", "decode", "no_std"]
categories = ["encoding"]
license = "MIT"

[features]
default = ["std"]

# Support STD convenience
std = []

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
simple-base64 = "0.23"
