[package]
name = "basenc"
version = "0.2.2"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"

description = "Encoding and decoding of Base-N encodings, no_std compatible."
documentation = "https://docs.rs/basenc/"
repository = "https://github.com/CasualX/basenc"
readme = "readme.md"
keywords = ["base64", "utf8", "encode", "decode", "no_std"]
categories = ["encoding"]
license = "MIT"

[features]
default = ["std", "simd-runtime"]

# Support STD convenience
std = []

# SIMD optimizations
simd-off = [] # Disable SIMD optimizations
simd-runtime = [] # Enable SIMD optimizations at runtime

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
urandom = "0.1"
simple-base64 = "0.23"
