[package]
name = "basenc"
version = "0.2.3"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2021"

description = "Encoding and decoding hex, base64 and base32 with support for #[no_std]."
documentation = "https://docs.rs/basenc/"
repository = "https://github.com/CasualX/basenc"
readme = "readme.md"
keywords = ["base64", "utf8", "encode", "decode", "no_std"]
categories = ["encoding"]
license = "MIT"

[features]
default = ["std", "simd-runtime"]

# Support for the standard library
std = []

# SIMD acceleration
simd-off = [] # Disable SIMD acceleration.
simd-runtime = [] # Enable runtime detection of SIMD support.

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
urandom = "0.1"
simple-base64 = "0.23"
